kubernetes/apps/anime/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: anime-v2
  labels:
    backups.kalexlab.xyz/use: "true"
