kubernetes/apps/anime/manifests/worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    kalexlab.xyz/app: anime-v2
    kalexlab.xyz/component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: anime-v2
      kalexlab.xyz/component: worker
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: anime-v2
        kalexlab.xyz/component: worker
        kalexlab.xyz/monitoring: "true"
        egress.kalexlab.xyz/policy: vpn
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: worker
          image: "registry.kalexlab.xyz/anime-v2/api:latest"
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: 100Mi
              cpu: 5m
            limits:
              memory: 400Mi
          volumeMounts:
            - mountPath: /anime
              name: anime-data-pvc
            - mountPath: /config.yaml
              subPath: config.yaml
              name: anime-conf
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65535
        runAsGroup: 65535
        fsGroup: 65535
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: anime-conf
          configMap:
            name: anime-conf
        - name: anime-data-pvc
          persistentVolumeClaim:
            claimName: anime-data-pvc
