kubernetes/apps/anime/manifests/api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    kalexlab.xyz/app: anime-v2
    kalexlab.xyz/component: api
    kalexlab.xyz/monitoring: "true"
  annotations:
    gatus.kalexlab.xyz/enabled: "true"
    gatus.kalexlab.xyz/path: /api/health
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    kalexlab.xyz/app: anime-v2
    kalexlab.xyz/component: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    kalexlab.xyz/app: anime-v2
    kalexlab.xyz/component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: anime-v2
      kalexlab.xyz/component: api
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: anime-v2
        kalexlab.xyz/component: api
        kalexlab.xyz/monitoring: "true"
        sso.kalexlab.xyz/idp: authentik
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: api
          image: "registry.kalexlab.xyz/anime-v2/api:latest"
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: 100Mi
              cpu: 5m
            limits:
              memory: 400Mi
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            failureThreshold: 3
            periodSeconds: 30
          volumeMounts:
            - mountPath: /anime
              name: anime-data-pvc
            - mountPath: /config.yaml
              subPath: config.yaml
              name: anime-conf
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65535
        runAsGroup: 65535
        fsGroup: 65535
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: anime-conf
          configMap:
            name: anime-conf
        - name: anime-data-pvc
          persistentVolumeClaim:
            claimName: anime-data-pvc
