kubernetes/apps/anime/manifests/valkey.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: queue
  labels:
    kalexlab.xyz/app: anime-v2
    kalexlab.xyz/component: queue
spec:
  type: ClusterIP
  ports:
    - name: valkey
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    kalexlab.xyz/app: anime-v2
    kalexlab.xyz/component: queue
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: queue
  labels:
    kalexlab.xyz/app: anime-v2
    kalexlab.xyz/component: queue
spec:
  replicas: 1
  serviceName: queue
  selector:
    matchLabels:
      kalexlab.xyz/app: anime-v2
      kalexlab.xyz/component: queue
  updateStrategy:
    type: RollingUpdate
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: anime-v2
        kalexlab.xyz/component: queue
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always
      containers:
        - name: queue
          image: "docker.io/valkey/valkey:9.1.1-alpine"
          imagePullPolicy: Always
          ports:
            - name: valkey
              containerPort: 6379
              protocol: TCP
          livenessProbe:
            exec:
              command: ["sh", "-c", "valkey-cli ping"]
            periodSeconds: 30
          readinessProbe:
            exec:
              command: ["sh", "-c", "valkey-cli ping"]
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              memory: 10Mi
              cpu: 1m
            limits:
              memory: 200Mi
              cpu: 100m
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /data
              name: valkey-data-pvc
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
  volumeClaimTemplates:
    - metadata:
        name: valkey-data-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 2Gi
