kubernetes/apps/anime/manifests/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: anime-ingress
  annotations:
    external-dns.kubernetes.io/target: 192.168.10.20
    gatus.kalexlab.xyz/path: /
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: "Host(`anime.kalexlab.xyz`) && PathPrefix(`/api`)"
      services:
        - name: api
          port: http
    - kind: Rule
      match: "Host(`anime.kalexlab.xyz`)"
      services:
        - name: web
          port: http
  tls:
    secretName: anime-ingress-certificate-secret
